overflow hidden issue

--- a/src/authenticated.module.css
+++ b/src/authenticated.module.css
@@ -1,6 +1,7 @@
 .root {
   background-color: black;
   height: 100%;
+  overflow: hidden;
   position: absolute;
   width: 100%
 }
